--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
